# nyssa-bench

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RESULTS.md  SECURITY.md  VALIDATION.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_engine_adapter.md  new_task.md
.github/workflows/: ci.yml
benchmark_results/: baselines_v0.json
configs/engines/: dummy.yaml  genesis.yaml  maniskill.yaml  mujoco.yaml  robocasa.yaml
configs/experiments/: genesis_contact_stress_v0.yaml  robocasa_kitchen_v0.yaml
configs/policies/: diffusion.yaml  lerobot.yaml  openvla.yaml  random.yaml  robomimic.yaml  robomimic_bc_flat.json  scripted.yaml
configs/robots/: panda.yaml
configs/suites/: articulated_object_v0.yaml  maniskill_manipulation_v0.yaml  maniskill_planner_bc_v0.yaml  maniskill_smoke_v0.yaml  mujoco_control_v0.yaml  stress_tests_v0.yaml  tabletop_manipulation_v0.yaml  warehouse_manipulation_v0.yaml
docker/: Dockerfile  Dockerfile.maniskill  Dockerfile.mujoco  docker-compose.yml
docs/: adding_new_policies.md  adding_new_robots.md  adding_new_tasks.md  api_stability.md  benchmark_audit_checklist.md  benchmark_protocol.md  dataset_export.md  docker.md  engine_adapters.md  experimental_backends.md  failure_and_recovery_metrics.md  failure_taxonomy.md  foundational_contributions.md  frontier_questions.md  getting_started.md  index.md  installation.md  launch_v0.1.md  leaderboard_spec.md  learned_baselines.md  metrics.md  pairwise_evaluation_protocol.md  plugins.md  policy_adapters.md  policy_comparison.md  real_to_sim_roadmap.md  related_work.md  reports.md  reproducibility.md  research_agenda.md  result_tiers.md  roadmap.md  scorecards.md  stressor_protocol.md  task_spec.md  validation_protocol.md  vla_robustness_protocol.md
docs/paper/: nyssabench_v0_protocol.md
examples/: compare_two_policies.py  create_custom_task.py  export_dataset.py  generate_report.py  run_bc_maniskill.py  run_diffusion_policy.py  run_lerobot_policy.py  run_maniskill_task.py  run_openvla_policy.py  run_random_policy.py  run_robomimic_policy.py  run_scripted_policy.py  train_bc_maniskill.py
nyssa_bench/: __init__.py  cli.py  runner.py
nyssa_bench/arena/: __init__.py  arena_report.py  pairwise_runner.py  preference_schema.py
nyssa_bench/baselines/: __init__.py  features.py  lerobot_bc.py  robomimic_bc.py  scripted_maniskill.py  simple_bc.py
nyssa_bench/core/: __init__.py  episode.py  registry.py  suite.py  task.py
nyssa_bench/datasets/: __init__.py  collect_maniskill.py  export_hdf5.py  export_json.py  export_jsonl.py  export_lerobot.py  export_metrics_csv.py  export_parquet.py  export_robomimic.py  export_task_robomimic.py  import_maniskill.py  (+3 more)
scripts/: build_scorecard.py  make_demo_gif.py  make_demo_report.py  release_checklist.py  release_smoke.py  setup_rendering_linux.sh  validate_backend.py  validate_configs.py
tests/: test_arena.py  test_cli.py  test_core_flow.py  test_dependencies.py  test_plan_artifacts.py  test_plugins.py  test_research.py  test_scorecard.py
(+99 files in other folders)
